# vision-camera-yolo-inferencing

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  VisionJsiProcessorOnnx.podspec  package-lock.json  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/react-native-vision-camera/android/: CMakeLists.txt
android/react-native-vision-camera/android/src/main/cpp/frameprocessors/java-bindings/: JVisionCameraProxy.h
android/react-native-vision-camera/cmake/: react-native-vision-camera-config.cmake
android/src/main/: AndroidManifest.xml
android/src/main/java/ai/onnxruntime/: VisionJsiProcessorOnnxPackage.kt
android/src/main/java/com/visionjsiprocessoronnx/: VisionJsiProcessorModule.java  VisionJsiProcessorOnnxModule.kt  VisionJsiProcessorOnnxPackage.kt
cpp/: Inference.cpp  Inference.h  cpp-addapter.cpp  onnxFrameProcessor.cpp  onnxFrameProcessor.h  onnxFrameProcessorPlugin.cpp  react-native-vision-jsi-processor-onnx.cpp  react-native-vision-jsi-processor-onnx.h  react-native-vision-jsi-processor.cpp  react-native-vision-jsi-processor.h
ios/: VisionJsiProcessorOnnx.h  VisionJsiProcessorOnnx.mm
src/: NativeVisionJsiProcessorOnnx.ts  index.tsx
